myanalyzer.output
State 3 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 62 conflicts: 16 shift/reduce, 2 reduce/reduce
State 99 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input prog_body

    3 prog_body: function ';'
    4          | comps
    5          | commands ';'

    6 data_types: TK_INTCONST
    7           | TK_BOOLCONST
    8           | TK_CONSTSTRINGS
    9           | TK_FPCONST

   10 array: TK_IDENTIFIERS '[' TK_INTCONST ']'
   11      | TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   12      | TK_IDENTIFIERS '[' ']'

   13 comp_vars: TK_IDENTIFIERS
   14          | '#' TK_IDENTIFIERS
   15          | %empty
   16          | '#' array
   17          | array
   18          | comp_vars ',' comp_vars

   19 variables: comp_vars ':' data_types

   20 all_variables: variables
   21              | all_variables ';' variables

   22 constants: TK_CONST TK_IDENTIFIERS '=' TK_INTCONST ':' data_types
   23          | TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_INTCONST ':' data_types
   24          | TK_CONST TK_IDENTIFIERS '=' TK_BOOLCONST ':' data_types
   25          | TK_CONST TK_IDENTIFIERS '=' TK_CONSTSTRINGS ':' data_types
   26          | TK_CONST TK_IDENTIFIERS '=' TK_FPCONST ':' data_types
   27          | TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_FPCONST ':' data_types

   28 func_args: TK_IDENTIFIERS ':' data_types
   29          | TK_IDENTIFIERS '[' ']' ':' data_types
   30          | TK_IDENTIFIERS '[' TK_INTCONST ']' ':' data_types
   31          | func_args ',' func_args

   32 function_head: TK_DEF TK_IDENTIFIERS '(' ')' ':'
   33              | TK_DEF TK_IDENTIFIERS '(' func_args ')' ':'
   34              | TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   35              | TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   36              | TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   37              | TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'

   38 function_ret: TK_RET
   39             | TK_RET exp

   40 function_end: TK_ENDDEF

   41 function_body: variables
   42              | constants
   43              | statements
   44              | exp

   45 commands: function_body
   46         | commands ';' function_body

   47 function: function_head commands ';' function_end
   48         | function_head function_end

   49 functions: function
   50          | functions ';' function

   51 comps: TK_COMP TK_IDENTIFIERS ':' all_variables ';' functions ';' TK_ENDCOMP ';'

   52 exp: TK_FPCONST
   53    | TK_IDENTIFIERS
   54    | TK_INTCONST
   55    | TK_SIGNOP exp
   56    | exp '=' exp
   57    | exp '*' exp
   58    | exp '/' exp
   59    | exp '%' exp
   60    | exp TK_ASSIGNOP exp
   61    | exp TK_OR exp
   62    | exp TK_AND exp
   63    | exp TK_NOT exp
   64    | exp TK_NEQ exp
   65    | exp TK_EQ exp
   66    | exp '<' exp
   67    | exp '>' exp
   68    | exp TK_SMALLER exp
   69    | exp TK_BIGGER exp
   70    | exp TK_SIGNOP exp
   71    | exp TK_POWER exp
   72    | exp '.' exp
   73    | '(' exp ')'
   74    | '[' exp ']'
   75    | exp '(' exp ')'
   76    | TK_CONSTSTRINGS
   77    | TK_BOOLCONST
   78    | array
   79    | funccall_statement

   80 func_expr: func_expr ',' exp
   81          | exp

   82 statements: iff
   83           | for_statement
   84           | while_statement
   85           | break_statement
   86           | continue_statement
   87           | function_ret

   88 break_statement: TK_BREAK

   89 continue_statement: TK_CONTINUE

   90 if_expr: TK_IF '(' exp ')' ':'

   91 iff: if_expr commands ';' TK_ELSE ':' commands ';' TK_ENDIF
   92    | if_expr commands ';' TK_ENDIF

   93 sss_for: TK_INTCONST
   94        | TK_IDENTIFIERS
   95        | sss_for TK_SIGNOP sss_for

   96 for_statement: TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ':' TK_INTCONST ']' ':' commands ';' TK_ENDFOR
   97              | TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ']' ':' commands ';' TK_ENDFOR

   98 while_statement: TK_WHILE '(' exp ')' ':' commands ';' TK_ENDWHILE

   99 funccall_statement: TK_IDENTIFIERS '(' func_expr ')'
  100                   | TK_IDENTIFIERS '(' ')'


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 14 16
    '%' (37) 59
    '(' (40) 32 33 34 35 36 37 73 75 90 98 99 100
    ')' (41) 32 33 34 35 36 37 73 75 90 98 99 100
    '*' (42) 57
    ',' (44) 18 31 80
    '.' (46) 72
    '/' (47) 58
    ':' (58) 19 22 23 24 25 26 27 28 29 30 32 33 34 35 36 37 51 90 91 96 97 98
    ';' (59) 3 5 21 46 47 50 51 91 92 96 97 98
    '<' (60) 66
    '=' (61) 22 23 24 25 26 27 56
    '>' (62) 67
    '[' (91) 10 11 12 29 30 74 96 97
    ']' (93) 10 11 12 29 30 74 96 97
    error (256)
    TK_IDENTIFIERS <str> (258) 10 11 12 13 14 22 23 24 25 26 27 28 29 30 32 33 34 35 36 37 51 53 94 96 97 99 100
    TK_INTCONST <str> (259) 6 10 22 23 30 54 93 96
    TK_FPCONST <str> (260) 9 26 27 52
    TK_BOOLCONST <str> (261) 7 24 77
    TK_CONSTSTRINGS <str> (262) 8 25 76
    TK_DEF <str> (263) 32 33 34 35 36 37
    TK_ENDDEF <str> (264) 40
    TK_RET <str> (265) 38 39
    TK_ARROW <str> (266) 34 35 36 37
    TK_SMALLER <str> (267) 68
    TK_BIGGER <str> (268) 69
    TK_POWER <str> (269) 71
    TK_EQ <str> (270) 65
    TK_NEQ <str> (271) 64
    TK_SIGNOP <str> (272) 23 27 55 70 95
    TK_AND <str> (273) 62
    TK_OR <str> (274) 61
    TK_NOT <str> (275) 63
    TK_ASSIGNOP <str> (276) 60
    TK_CONST <str> (277) 22 23 24 25 26 27
    TK_CONTINUE <str> (278) 89
    TK_BREAK <str> (279) 88
    TK_IF <str> (280) 90
    TK_ENDIF <str> (281) 91 92
    TK_FOR <str> (282) 96 97
    TK_ENDFOR <str> (283) 96 97
    TK_WHILE <str> (284) 98
    TK_ENDWHILE <str> (285) 98
    TK_ELSE <str> (286) 91
    TK_IN <str> (287) 96 97
    TK_COMP <str> (288) 51
    TK_ENDCOMP <str> (289) 51


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    input (51)
        on left: 1 2
        on right: 0 2
    prog_body <str> (52)
        on left: 3 4 5
        on right: 2
    data_types <str> (53)
        on left: 6 7 8 9
        on right: 19 22 23 24 25 26 27 28 29 30 34 35
    array <str> (54)
        on left: 10 11 12
        on right: 16 17 78
    comp_vars <str> (55)
        on left: 13 14 15 16 17 18
        on right: 18 19
    variables <str> (56)
        on left: 19
        on right: 20 21 41
    all_variables <str> (57)
        on left: 20 21
        on right: 21 51
    constants <str> (58)
        on left: 22 23 24 25 26 27
        on right: 42
    func_args <str> (59)
        on left: 28 29 30 31
        on right: 31 33 35 37
    function_head <str> (60)
        on left: 32 33 34 35 36 37
        on right: 47 48
    function_ret <str> (61)
        on left: 38 39
        on right: 87
    function_end <str> (62)
        on left: 40
        on right: 47 48
    function_body <str> (63)
        on left: 41 42 43 44
        on right: 45 46
    commands <str> (64)
        on left: 45 46
        on right: 5 46 47 91 92 96 97 98
    function <str> (65)
        on left: 47 48
        on right: 3 49 50
    functions <str> (66)
        on left: 49 50
        on right: 50 51
    comps <str> (67)
        on left: 51
        on right: 4
    exp <str> (68)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 39 44 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 80 81 90 98
    func_expr <str> (69)
        on left: 80 81
        on right: 80 99
    statements <str> (70)
        on left: 82 83 84 85 86 87
        on right: 43
    break_statement <str> (71)
        on left: 88
        on right: 85
    continue_statement <str> (72)
        on left: 89
        on right: 86
    if_expr <str> (73)
        on left: 90
        on right: 91 92
    iff <str> (74)
        on left: 91 92
        on right: 82
    sss_for <str> (75)
        on left: 93 94 95
        on right: 95 96 97
    for_statement <str> (76)
        on left: 96 97
        on right: 83
    while_statement <str> (77)
        on left: 98
        on right: 84
    funccall_statement <str> (78)
        on left: 99 100
        on right: 79


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input prog_body

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . prog_body
    3 prog_body: . function ';'
    4          | . comps
    5          | . commands ';'
   10 array: . TK_IDENTIFIERS '[' TK_INTCONST ']'
   11      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   12      | . TK_IDENTIFIERS '[' ']'
   13 comp_vars: . TK_IDENTIFIERS
   14          | . '#' TK_IDENTIFIERS
   15          | . %empty  [',', ':']
   16          | . '#' array
   17          | . array
   18          | . comp_vars ',' comp_vars
   19 variables: . comp_vars ':' data_types
   22 constants: . TK_CONST TK_IDENTIFIERS '=' TK_INTCONST ':' data_types
   23          | . TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_INTCONST ':' data_types
   24          | . TK_CONST TK_IDENTIFIERS '=' TK_BOOLCONST ':' data_types
   25          | . TK_CONST TK_IDENTIFIERS '=' TK_CONSTSTRINGS ':' data_types
   26          | . TK_CONST TK_IDENTIFIERS '=' TK_FPCONST ':' data_types
   27          | . TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_FPCONST ':' data_types
   32 function_head: . TK_DEF TK_IDENTIFIERS '(' ')' ':'
   33              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' ':'
   34              | . TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   35              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   36              | . TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   37              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'
   38 function_ret: . TK_RET
   39             | . TK_RET exp
   41 function_body: . variables
   42              | . constants
   43              | . statements
   44              | . exp
   45 commands: . function_body
   46         | . commands ';' function_body
   47 function: . function_head commands ';' function_end
   48         | . function_head function_end
   51 comps: . TK_COMP TK_IDENTIFIERS ':' all_variables ';' functions ';' TK_ENDCOMP ';'
   52 exp: . TK_FPCONST
   53    | . TK_IDENTIFIERS
   54    | . TK_INTCONST
   55    | . TK_SIGNOP exp
   56    | . exp '=' exp
   57    | . exp '*' exp
   58    | . exp '/' exp
   59    | . exp '%' exp
   60    | . exp TK_ASSIGNOP exp
   61    | . exp TK_OR exp
   62    | . exp TK_AND exp
   63    | . exp TK_NOT exp
   64    | . exp TK_NEQ exp
   65    | . exp TK_EQ exp
   66    | . exp '<' exp
   67    | . exp '>' exp
   68    | . exp TK_SMALLER exp
   69    | . exp TK_BIGGER exp
   70    | . exp TK_SIGNOP exp
   71    | . exp TK_POWER exp
   72    | . exp '.' exp
   73    | . '(' exp ')'
   74    | . '[' exp ']'
   75    | . exp '(' exp ')'
   76    | . TK_CONSTSTRINGS
   77    | . TK_BOOLCONST
   78    | . array
   79    | . funccall_statement
   82 statements: . iff
   83           | . for_statement
   84           | . while_statement
   85           | . break_statement
   86           | . continue_statement
   87           | . function_ret
   88 break_statement: . TK_BREAK
   89 continue_statement: . TK_CONTINUE
   90 if_expr: . TK_IF '(' exp ')' ':'
   91 iff: . if_expr commands ';' TK_ELSE ':' commands ';' TK_ENDIF
   92    | . if_expr commands ';' TK_ENDIF
   96 for_statement: . TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ':' TK_INTCONST ']' ':' commands ';' TK_ENDFOR
   97              | . TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ']' ':' commands ';' TK_ENDFOR
   98 while_statement: . TK_WHILE '(' exp ')' ':' commands ';' TK_ENDWHILE
   99 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
  100                   | . TK_IDENTIFIERS '(' ')'

    $end             shift, and go to state 2
    TK_IDENTIFIERS   shift, and go to state 3
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_DEF           shift, and go to state 8
    TK_RET           shift, and go to state 9
    TK_SIGNOP        shift, and go to state 10
    TK_CONST         shift, and go to state 11
    TK_CONTINUE      shift, and go to state 12
    TK_BREAK         shift, and go to state 13
    TK_IF            shift, and go to state 14
    TK_FOR           shift, and go to state 15
    TK_WHILE         shift, and go to state 16
    TK_COMP          shift, and go to state 17
    '['              shift, and go to state 18
    '('              shift, and go to state 19
    '#'              shift, and go to state 20

    $default  reduce using rule 15 (comp_vars)

    prog_body           go to state 21
    array               go to state 22
    comp_vars           go to state 23
    variables           go to state 24
    constants           go to state 25
    function_head       go to state 26
    function_ret        go to state 27
    function_body       go to state 28
    commands            go to state 29
    function            go to state 30
    comps               go to state 31
    exp                 go to state 32
    statements          go to state 33
    break_statement     go to state 34
    continue_statement  go to state 35
    if_expr             go to state 36
    iff                 go to state 37
    for_statement       go to state 38
    while_statement     go to state 39
    funccall_statement  go to state 40


State 2

    0 $accept: input $end .

    $default  accept


State 3

   10 array: TK_IDENTIFIERS . '[' TK_INTCONST ']'
   11      | TK_IDENTIFIERS . '[' TK_IDENTIFIERS ']'
   12      | TK_IDENTIFIERS . '[' ']'
   13 comp_vars: TK_IDENTIFIERS .  [',', ':']
   53 exp: TK_IDENTIFIERS .  [TK_SMALLER, TK_BIGGER, TK_POWER, TK_EQ, TK_NEQ, TK_SIGNOP, TK_AND, TK_OR, TK_NOT, TK_ASSIGNOP, '=', '<', '>', '*', '/', '%', '(', '.', ';']
   99 funccall_statement: TK_IDENTIFIERS . '(' func_expr ')'
  100                   | TK_IDENTIFIERS . '(' ')'

    '['  shift, and go to state 41
    '('  shift, and go to state 42

    '('       [reduce using rule 53 (exp)]
    ','       reduce using rule 13 (comp_vars)
    ':'       reduce using rule 13 (comp_vars)
    $default  reduce using rule 53 (exp)


State 4

   54 exp: TK_INTCONST .

    $default  reduce using rule 54 (exp)


State 5

   52 exp: TK_FPCONST .

    $default  reduce using rule 52 (exp)


State 6

   77 exp: TK_BOOLCONST .

    $default  reduce using rule 77 (exp)


State 7

   76 exp: TK_CONSTSTRINGS .

    $default  reduce using rule 76 (exp)


State 8

   32 function_head: TK_DEF . TK_IDENTIFIERS '(' ')' ':'
   33              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' ':'
   34              | TK_DEF . TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   35              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   36              | TK_DEF . TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   37              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'

    TK_IDENTIFIERS  shift, and go to state 43


State 9

   10 array: . TK_IDENTIFIERS '[' TK_INTCONST ']'
   11      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   12      | . TK_IDENTIFIERS '[' ']'
   38 function_ret: TK_RET .  [';']
   39             | TK_RET . exp
   52 exp: . TK_FPCONST
   53    | . TK_IDENTIFIERS
   54    | . TK_INTCONST
   55    | . TK_SIGNOP exp
   56    | . exp '=' exp
   57    | . exp '*' exp
   58    | . exp '/' exp
   59    | . exp '%' exp
   60    | . exp TK_ASSIGNOP exp
   61    | . exp TK_OR exp
   62    | . exp TK_AND exp
   63    | . exp TK_NOT exp
   64    | . exp TK_NEQ exp
   65    | . exp TK_EQ exp
   66    | . exp '<' exp
   67    | . exp '>' exp
   68    | . exp TK_SMALLER exp
   69    | . exp TK_BIGGER exp
   70    | . exp TK_SIGNOP exp
   71    | . exp TK_POWER exp
   72    | . exp '.' exp
   73    | . '(' exp ')'
   74    | . '[' exp ']'
   75    | . exp '(' exp ')'
   76    | . TK_CONSTSTRINGS
   77    | . TK_BOOLCONST
   78    | . array
   79    | . funccall_statement
   99 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
  100                   | . TK_IDENTIFIERS '(' ')'

    TK_IDENTIFIERS   shift, and go to state 44
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_SIGNOP        shift, and go to state 10
    '['              shift, and go to state 18
    '('              shift, and go to state 19

    $default  reduce using rule 38 (function_ret)

    array               go to state 45
    exp                 go to state 46
    funccall_statement  go to state 40


State 10

   10 array: . TK_IDENTIFIERS '[' TK_INTCONST ']'
   11      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   12      | . TK_IDENTIFIERS '[' ']'
   52 exp: . TK_FPCONST
   53    | . TK_IDENTIFIERS
   54    | . TK_INTCONST
   55    | . TK_SIGNOP exp
   55    | TK_SIGNOP . exp
   56    | . exp '=' exp
   57    | . exp '*' exp
   58    | . exp '/' exp
   59    | . exp '%' exp
   60    | . exp TK_ASSIGNOP exp
   61    | . exp TK_OR exp
   62    | . exp TK_AND exp
   63    | . exp TK_NOT exp
   64    | . exp TK_NEQ exp
   65    | . exp TK_EQ exp
   66    | . exp '<' exp
   67    | . exp '>' exp
   68    | . exp TK_SMALLER exp
   69    | . exp TK_BIGGER exp
   70    | . exp TK_SIGNOP exp
   71    | . exp TK_POWER exp
   72    | . exp '.' exp
   73    | . '(' exp ')'
   74    | . '[' exp ']'
   75    | . exp '(' exp ')'
   76    | . TK_CONSTSTRINGS
   77    | . TK_BOOLCONST
   78    | . array
   79    | . funccall_statement
   99 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
  100                   | . TK_IDENTIFIERS '(' ')'

    TK_IDENTIFIERS   shift, and go to state 44
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_SIGNOP        shift, and go to state 10
    '['              shift, and go to state 18
    '('              shift, and go to state 19

    array               go to state 45
    exp                 go to state 47
    funccall_statement  go to state 40


State 11
